# flappy_rs

./: Cargo.toml  README.md
src/: bundles.rs  components.rs  main.rs  resources.rs  systems.rs
