[package]
name = "flappy_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = ["multi_threaded", "default_font", "bevy_sprite", "bevy_ui", "bevy_asset", "bevy_winit", "png", "bevy_state", "bevy_gizmos"] }
fastrand = "2.2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false