[package]
name = "flappy_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = ["multi_threaded", "default_font", "bevy_window", "bevy_sprite", "bevy_ui", "bevy_asset", "bevy_winit", "png", "bevy_state", "bevy_gizmos"] }
fastrand = "2.2.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"], optional = true }

[features]
no_log = ["log"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"